--- a/packages/com.sonosthesia.ui/Style/sonosthesia-list.uss
+++ b/packages/com.sonosthesia.ui/Style/sonosthesia-list.uss
@@ -2,6 +2,7 @@
     color: rgb(221, 221, 221);
     -unity-text-align: middle-center;
     font-size: 11px;
+    margin-bottom: 4px;
 }
 
 .list-label-even {
@@ -9,11 +10,11 @@
 }
 
 .list-label-odd {
-    background-color: rgba(53, 53, 53, 0.72);
+    background-color: rgb(75, 75, 75);
 }
 
 .list-item {
-    height: 25px;
+    height: 26px;
     -unity-text-align: middle-left;
     margin-left: 0;
     margin-right: 0;
@@ -27,4 +28,12 @@
     border-right-width: 1px;
     border-top-width: 1px;
     border-bottom-width: 1px;
+    border-left-color: rgb(159, 159, 159);
+    border-right-color: rgb(159, 159, 159);
+    border-top-color: rgb(159, 159, 159);
+    border-bottom-color: rgb(159, 159, 159);
+    align-items: center;
+    flex-direction: row;
+    flex-grow: 0;
+    max-height: 26px;
 }
